jquery up and running within handlebar template

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,12 @@
+<script type="text/javascript">
+   $(function(){
+      $("<p>Hi there!</p>").insertAfter("#followMe");
+   });
+</script> 
+
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
 <p>Here is some extra text {{extra}}
 and here is yet another {{extra1}}
+<p id="followMe">Follow me!</p>
+
