--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,6 +3,8 @@
   <head>
     <title>{{title}}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <script type="text/javascript" src="/javascripts/jquery-2.2.3.js">
+      </script>
   </head>
   <body>
     {{{body}}}
