First drag and drop

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,8 +3,10 @@
   <head>
     <title>{{title}}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
-    <script type="text/javascript" src="/javascripts/jquery-2.2.3.js">
-      </script>
+
+    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+
   </head>
   <body>
     {{{body}}}
