--- a/views/drag.hbs
+++ b/views/drag.hbs
@@ -2,6 +2,7 @@
  <script>
   $(function() {
     $( "#draggable" ).draggable();
+    $( "#druggable" ).draggable();
     $( "#droppable" ).droppable({
       drop: function( event, ui ) {
         $( this )
@@ -13,12 +14,17 @@
   });
   </script>
 
- 
-<div id="draggable" class="ui-widget-content">
-  <p>Drag me to my target</p>
+
+{{#times 10}} 
+<div id="draggable">
+  <p>Drag me to my target {{this}}</p>
+</div>
+{{/times}}
+<div id="druggable">
+  <p>Drug me to my target {{this}}</p>
 </div>
  
-<div id="droppable" class="ui-widget-header">
+<div id="droppable">
   <p>Drop here</p>
 </div>
  
