--- a/views/drag.hbs
+++ b/views/drag.hbs
@@ -4,7 +4,7 @@
 
      $(".draggable").draggable()
     $( "#druggable" ).draggable();
-    $( "#droppable" ).droppable({
+    $( ".droppable" ).droppable({
       drop: function( event, ui ) {
         $( this )
           .addClass( "ui-state-highlight" )
@@ -14,7 +14,9 @@
     });
   });
 </script>
-
+<table>
+<tr>
+<td>
 {{#times 10}} 
 <div class="draggable">
   <p>Drag me to my target {{this}}</p>
@@ -23,10 +25,16 @@
 <div id="druggable">
   <p>Drug me to my target </p>
 </div>
- 
-<div id="droppable">
+ </td>
+<td></td>
+<td>
+{{#times 10}}
+<div class="droppable">
   <p>Drop here</p>
 </div>
- 
+{{/times}}
+ </td>
+</tr>
+</table>
 
  
