show individual items

--- a/views/listitems.hbs
+++ b/views/listitems.hbs
@@ -2,6 +2,6 @@
 
 <p>start of data
 {{#each mydata}}
-<li>{{this.attributes.item}}</li>
+<li>{{this.attributes.item}} <a href=/showitem?id={{this.thingId}}>show</a></li>
 {{/each}}
 <p>end of data
