now with smooth delete and add

--- a/views/additem.hbs
+++ b/views/additem.hbs
@@ -12,6 +12,6 @@ What would you like to buy?
 {{/if}}
 
 <form method="put">
- <input type="text" name="item">
+ <input type="text" name="item" autofocus>
  <input type="submit">
 </form>
