--- a/views/listitems.hbs
+++ b/views/listitems.hbs
@@ -1,7 +1,17 @@
 <h1>{{title}}</h1>
 
-<p>start of data
-{{#each mydata}}
-<li>{{this.attributes.item}} <a href=/showitem?id={{this.thingId}}>show</a></li>
+<table>
+{{#each	mydata}}
+	<tr>
+		<td>
+			{{this.attributes.item}} 
+		</td>
+		<td>
+			<a href=/showitem?id={{this.thingId}}>show</a>
+		</td>
+		<td>
+			<a href=/delitem?id={{this.thingId}}>delete</a>
+		</td>		
+	</tr>
 {{/each}}
-<p>end of data
+</table>
