--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,7 +6,10 @@
 
     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-
+    <meta name="viewport" content="width=568, maximum-scale=1.0">
+    <style type="text/css" media="only screen and (max-device-width: 360px) and (orientation: portrait)">
+  body { font-size: 200%; }
+</style>
   </head>
   <body>
     <a href=/listitems>listitems</a> <a href=/additem>additem</a>
