--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,28 @@ body {
 a {
   color: #00B7FF;
 }
+
+
+ul {
+    border: 1px solid black;
+    list-style: none;
+    padding: 0;
+}
+
+li {
+    padding: 0 10px;
+    height: 25px;
+    line-height: 25px;
+}
+
+li:nth-child(odd) {
+    background-color: #CCC;
+}
+
+li:nth-child(even) {
+    background-color: white;
+}
+
+li:hover {
+    cursor: move;
+}
