--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,7 +6,7 @@
 
     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-
+    <script src="/javascripts/jquery.ui.touch-punch.js"></script>
   </head>
   <body>
     <a href=/listitems>listitems</a> <a href=/additem>additem</a>
