--- a/views/alloc.hbs
+++ b/views/alloc.hbs
@@ -1,18 +1,28 @@
 <script src="/javascripts/connect.js"></script>
 
+<script>
+function getStores() {
+return [
+{{#each stores}}
+   "{{this.attributes.name}}",
+{{/each}}
+	];
+	// return ["store1", "store2", "store3"];
+}
+</script>
 <div id=left>
 <h2>From</h2>
 <ul id="from">
     {{#each mydata}}
-    	    <li> {{this.id}} </li>
+    	    <li> {{this.attributes.item}} </li>
     {{/each}}
 </ul>
 </div>    
  
 {{#each stores}}
 <div id="right">
-<h2>{{this}}</h2>
-<ul id="{{this}}">
+<h2>{{this.attributes.name}}</h2>
+<ul id="{{this.attributes.name}}">
 
 </ul>
 </div>
