--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,7 +14,10 @@
     <script src="/javascripts/jquery.ui.touch-punch.js"></script>
   </head>
   <body>
-    <a href=/listitems>listitems</a> <a href=/additem>additem</a>
+    <a href=/listitems>listitems</a> 
+    <a href=/additem>additem</a>
+    <a href=/addstore>addstore</a>
+    <a href=/alloc>alloc</a>
     {{{body}}}
   </body>
 </html>
