--- a/views/alloc.hbs
+++ b/views/alloc.hbs
@@ -7,7 +7,7 @@ return [
    "{{this.attributes.name}}",
 {{/each}}
 	];
-	// return ["store1", "store2", "store3"];
+	// TBD MWA: Is the above a disgraceful hack or the only way of communicating forward to jquery from the generating page?
 }
 </script>
 <div id=left>
