--- a/views/alloc.hbs
+++ b/views/alloc.hbs
@@ -4,17 +4,18 @@
 function getStores() {
 return [
 {{#each stores}}
-   "{{this.attributes.name}}",
+   "{{this.thingId}}",
 {{/each}}
 	];
 	// TBD MWA: Is the above a disgraceful hack or the only way of communicating forward to jquery from the generating page?
+	// TBD you could use ajax
 }
 </script>
 <div id=left>
 <h2>From</h2>
 <ul id="from">
     {{#each mydata}}
-    	    <li> {{this.attributes.item}} </li>
+    	    <li id={{this.thingId}}> {{this.attributes.item}} </li>
     {{/each}}
 </ul>
 </div>    
@@ -22,7 +23,7 @@ return [
 {{#each stores}}
 <div id="right">
 <h2>{{this.attributes.name}}</h2>
-<ul id="{{this.attributes.name}}">
+<ul id="{{this.thingId}}">
 
 </ul>
 </div>
