generic thing display and deletion

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -16,6 +16,7 @@
   <body>
     <a href=/listitems>listitems</a> 
     <a href=/additem>additem</a>
+    <a href=/liststores>liststores</a> 
     <a href=/addstore>addstore</a>
     <a href=/alloc>alloc</a>
     {{{body}}}
