--- a/views/liststores.hbs
+++ b/views/liststores.hbs
@@ -4,7 +4,7 @@
 {{#each	mydata}}
 	<tr>
 		<td>
-			{{this.attributes.item}} 
+			{{this.attributes.name}} 
 		</td>
 		<td>
 			<a href=/showthing?id={{this.thingId}}>show</a>
