--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -19,6 +19,7 @@
     <a href=/liststores>liststores</a> 
     <a href=/addstore>addstore</a>
     <a href=/alloc>alloc</a>
+    <a href=/listthings>listthings</a> 
     {{{body}}}
   </body>
 </html>
