--- a/views/listthings.hbs
+++ b/views/listthings.hbs
@@ -4,7 +4,10 @@
 {{#each	mydata}}
 	<tr>
 		<td>
-			{{this.attributes.name}} 
+			{{this.thingId}} 
+		</td>
+		<td>
+		        {{this.attributes.name}}
 		</td>
 		<td>
 			<a href=/showthing?id={{this.thingId}}>show</a>
