now with mapping

--- a/views/liststores.hbs
+++ b/views/liststores.hbs
@@ -7,6 +7,9 @@
 			{{this.attributes.name}} 
 		</td>
 		<td>
+			<a href=/chooseloc?id={{this.thingId}}&name={{this.attributes.name}}>locate</a>
+		</td>
+		<td>
 			<a href=/showthing?id={{this.thingId}}>show</a>
 		</td>
 		<td>
