location setting for stores completed

--- a/views/chooseloc.hbs
+++ b/views/chooseloc.hbs
@@ -78,7 +78,7 @@
         }
       }
     </script>
-    
+    <script src="//code.jquery.com/jquery-1.10.2.js"></script>    
     <script src="javascripts/choosermap.js"> </script>
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLCibD6jvAD0UUwEXpM9vtzdwlKVUfyIg&libraries=places&callback=initAutocomplete" async defer>
