--- a/views/liststores.hbs
+++ b/views/liststores.hbs
@@ -14,7 +14,10 @@
 		</td>
 		<td>
 			<a href=/delthing?id={{this.thingId}}>delete</a>
-		</td>		
+		</td>
+		<td>
+			{{this.attributes.position}}
+		</td>
 	</tr>
 {{/each}}
 </table>
