polished, debugged, documented, with working location and nice front page

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,15 +1,19 @@
-<script type="text/javascript">
-   $(function(){
-      $("<p>Hi there!</p>").insertAfter("#followMe");
-   });
-</script> 
+<h1>Shopping App</h1>
+<p>A web application developed in the scope of the following projects:
+<ul>
+<li>BiE</li>
+<li>UPA Mobile Assistant</li>
+</ul>
 
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
-<p>Here is some extra text {{extra}}
-and here is yet another {{extra1}}
-<p id="followMe">Follow me!</p>
-
-{{#times 10}}
-    <span>{{this}}</span>
-{{/times}}
+...using the following technologies:
+<ul>
+<li>node.js reactive framework</li>
+<li>express web app framework</li>
+<li>handlebars templating engine</li>
+<li>google maps javascript api</li>
+<li>jquery ui drag and drop</li>
+<li>jquery ajax</li>
+<li>jquery touch interface with touch punch</li>
+<li>BICS hosting (alternative heroku)</li>
+<li>CR Things for persistence (alternative MongoDB)</li>
+</ul>
