--- a/views/liststores.hbs
+++ b/views/liststores.hbs
@@ -16,7 +16,7 @@
 			<a href=/delthing?id={{this.thingId}}>delete</a>
 		</td>
 		<td>
-			{{this.attributes.position}}
+			{{this.attributes.position.title}}
 		</td>
 	</tr>
 {{/each}}
