--- a/views/plantrip.hbs
+++ b/views/plantrip.hbs
@@ -1,5 +1,9 @@
-
-
+<script>
+  function getThingId() {
+     return "{{store.thingId}}"
+  }
+</script>
+<script src="/javascripts/shoppingTrip.js"></script>
 
 <h1>Plan trip to {{store.attributes.name}}</h1>
 
@@ -21,25 +25,7 @@ on: <input type="date" id=tripDate>
 {{else}}
  (Currently unset)
 {{/if}} 
-
-<script>
-  function sendTripDate() {
-     var tripDate = document.getElementById("tripDate").value;
-     alert(tripDate);  
-  	$.ajax({
-	    type: "GET",
-	    url: "/settripdate",
-	    //		contentType: 'application/json; charset=utf-8',
-	    data: {
-		storeId: "{{store.thingId}}",
-		tripDate: tripDate,
-	    },
-	    success: function(result) {
-	    },
-	});
-	location.replace(document.referrer);
-
-  };
-  
-</script>
+<button type="button" onclick="notifyRoutePlanner()">Notify Route Planner</button> 
+<button type="button" onclick="cancelRemoveTrip()">Cancel Trip and Remove Items</button> 
+<button type="button" onclick="returnAlloc()">Return to allocation page</button> 
 
