changed title to address in position attribute of store

--- a/views/liststores.hbs
+++ b/views/liststores.hbs
@@ -16,7 +16,7 @@
 			<a href=/delthing?id={{this.thingId}}>delete</a>
 		</td>
 		<td>
-			{{this.attributes.position.title}}
+			{{this.attributes.position.address}}
 		</td>
 	</tr>
 {{/each}}
