--- a/views/plantrip.hbs
+++ b/views/plantrip.hbs
@@ -42,5 +42,5 @@ on: <input type="date" id=tripDate>
 <p>
 <button type="button" onclick="cancelRemoveTrip()">Cancel Trip and Remove Items</button> 
 <p>
-<button type="button" onclick="returnAlloc()">Return to allocation page</button> 
+<button type="button" onclick="returnAlloc()">Return to planning overview</button> 
 
