--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -18,7 +18,7 @@
     <a href=/additem>additem</a>
     <a href=/liststores>liststores</a> 
     <a href=/addstore>addstore</a>
-    <a href=/alloc>alloc</a>
+    <a href=/alloc>planning</a>
     <a href=/listthings>listthings</a> 
     {{{body}}}
   </body>
