--- a/views/alloc.hbs
+++ b/views/alloc.hbs
@@ -25,9 +25,9 @@ return [
 <h2>Buy at {{this.name}}
 <a href="/plantrip?storeId={{this.id}}">plan trip</a>
 {{#if this.store.attributes.tripDate}} 
- (Currently {{this.store.attributes.tripDate}})
+ (Date currently {{this.store.attributes.tripDate}})
 {{else}}
- (Currently unset)
+ (Date currently unset)
 {{/if}} 
 </h2>
 <ul id="{{this.id}}">
