configuration over the web WOOHOO!

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -20,6 +20,7 @@
     <a href=/addstore>addstore</a>
     <a href=/alloc>planning</a>
     <a href=/listthings>listthings</a> 
+    <a href=/config>config</a> 
     {{{body}}}
   </body>
 </html>
