--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,19 +1,24 @@
-<h1>Shopping App</h1>
-<p>A web application developed in the scope of the following projects:
-<ul>
-<li>BiE</li>
-<li>UPA Mobile Assistant</li>
-</ul>
+    <h1>Shopping App</h1>
+    <p>A web application developed in the scope of the following projects:
+    <ul>
+    <li>BiE</li>
+    <li>UPA Mobile Assistant</li>
+    </ul>
 
-...using the following technologies:
-<ul>
-<li>node.js reactive framework</li>
-<li>express web app framework</li>
-<li>handlebars templating engine</li>
-<li>google maps javascript api</li>
-<li>jquery ui drag and drop</li>
-<li>jquery ajax</li>
-<li>jquery touch interface with touch punch</li>
-<li>BICS hosting (alternative heroku)</li>
-<li>CR Things for persistence (alternative MongoDB)</li>
-</ul>
+    ...using the following technologies:
+    <ul>
+        <li>node.js reactive framework</li>
+        <li>express web app framework</li>
+        <li>handlebars templating engine</li>
+    <li>google maps javascript api</li>
+    <li>jquery ui drag and drop</li>
+    <li>jquery ajax</li>
+    <li>jquery touch interface with touch punch</li>
+    <li>BICS hosting (alternative heroku)</li>
+    <li>CR Things for persistence (alternative MongoDB)</li>
+    </ul>
+    ...coming soon:
+    <ul>
+        <li>Angular 2.0</li>
+        <li>Typescript</li>
+    </ul>
