--- a/views/plantrip.hbs
+++ b/views/plantrip.hbs
@@ -38,9 +38,9 @@ on: <input type="date" id=tripDate>
 {{/if}} 
 </div>
 <p>
-<button type="button" onclick="notifyRoutePlanner()">Notify Route Planner</button> 
+  <a href="/notify?id={{store.thingId}}">Notify Route Planner</a>
 <p>
-<button type="button" onclick="cancelRemoveTrip()">Cancel Trip and Remove Items</button> 
+  <button type="button" onclick="cancelRemoveTrip()">Cancel Trip and Remove Items</button> 
 <p>
-<button type="button" onclick="returnAlloc()">Return to planning overview</button> 
+  <button type="button" onclick="returnAlloc()">Return to planning overview</button> 
 
